# model-client

./: model-client.cabal  test.conf
exe/: model-client.hs
lib/HEP/Automation/Model/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs  Type.hs
