Name:		model-client
Version:	0.0
Synopsis:	client program that communicates with model-server
Description: 	client program that communicates with model-server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable model-client
  Main-is: model-client.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, model-client

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, model-type, HEPUtil >= 0.1.1, 
                   configparser, parsec>3

  Exposed-Modules: 
                   HEP.Automation.Model.Client.Type
                   HEP.Automation.Model.Client.Job
                   HEP.Automation.Model.Client.Config
                   HEP.Automation.Model.Client.Command
  Other-Modules: 

 
		 